tests/paczka1/small_fuzzy/38362233.err
Error in line 5: S388 S779 4,3
Error in line 1: iLOToNbEUJW A47 99,7
Error in line 8: bgJchR4ic4U A47 25,2
